<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/item_zh_tw"
        android:title="@string/zh_tw" />

    <item
        android:id="@+id/item_zh_cn"
        android:title="@string/zh_cn" />

    <item
        android:id="@+id/item_en"
        android:title="@string/en" />

    <item
        android:id="@+id/item_ja"
        android:title="@string/ja" />

    <item
        android:id="@+id/item_ko"
        android:title="@string/ko" />

    <item
        android:id="@+id/item_es"
        android:title="@string/es" />

    <item
        android:id="@+id/item_id"
        android:title="@string/id" />

    <item
        android:id="@+id/item_th"
        android:title="@string/th" />

    <item
        android:id="@+id/item_vi"
        android:title="@string/vi" />
</menu>
